--- a/views/article.hbs
+++ b/views/article.hbs
@@ -1,7 +1,7 @@
 {{#article}}
     <h1>{{title}}</h1>
     <p>Published {{published}}</p>
-    <p>Author: {{name}}</p>
+    <p>Author: <a href="/author/{{name}}">{{name}}</a></p>
     <p><img src="/images/{{image}}" alt=""></p>
     {{{body}}}
 {{/article}}
