Display all articles using the article model

--- a/views/author.hbs
+++ b/views/author.hbs
@@ -1,7 +1,5 @@
 <div>
-    {{#articles}}
-    <h2>Looking at posts by: {{name}}</h2>
-    {{/articles}}
+    <h2>Looking at posts by: {{author}}</h2>
 </div>
 <div class="article-list">
     {{#articles}}
