Added basic login and error handling for authors

--- a/views/author.hbs
+++ b/views/author.hbs
@@ -1,5 +1,6 @@
+
 <div>
-    <h2>Looking at posts by: {{author}}</h2>
+    <h2>Looking at posts by: {{author}} {{error}} </h2>
 </div>
 <div class="article-list">
     {{#articles}}
@@ -12,4 +13,4 @@
         </h2>
     </article>
     {{/articles}}
-</div>
+</div>z
