--- a/views/index.hbs
+++ b/views/index.hbs
@@ -1,14 +1,14 @@
 <h1>Homepage</h1>
 
-<div class="article-list">
+
+  <div class="article-list">
     {{#articles}}
-    <article>
+      <article>
         <a href="/article/{{slug}}">
-        <img src="/images/{{image}}" alt="">
+          <img src="/images/{{image}}" alt="" />
         </a>
         <h2>
-        <a href="/article/{{slug}}">{{name}}</a>
+          <a href="/article/{{slug}}">{{name}}</a>
         </h2>
-    </article>
+      </article>
     {{/articles}}
-</div>
