Added Session and Error handling to login and register

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -10,9 +10,7 @@
 </head>
 <body>
     <header>
-        <a href="/">Christian Blog</a>
-        <button>Register</button>
-        <button>Login</button>
+        <a href="/dashboard">Christian Blog</a>
         <hr>
     </header>
     <main>
