--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,6 +1,6 @@
 <h1>Login</h1>
 
-<form method="post" action="/login/login">
+<form method="post" action="/login/process">
         <label for="username">Username</label>
         <input type="text" name="username" id="username">
 
