--- a/views/register.hbs
+++ b/views/register.hbs
@@ -1,6 +1,6 @@
 <h1>Register</h1>
 
-<form method="post" action="/register/create">
+<form method="post" action="/register/process">
         <label for="username">Username</label>
         <input type="text" name="username" id="username">
 
@@ -11,4 +11,5 @@
         <input type="text" name="cPassword" id="cPassword" >
 
         <button>Register</button>
+        {{error}}
 </form>
