Started adding better hbs

--- a/views/layouts/loginPage.hbs
+++ b/views/layouts/loginPage.hbs
@@ -14,14 +14,7 @@
         <hr>
     </header>
     <main>
-        <div>
-             <div>
-                {{> index}}
-            </div>
-            <div>
-                {{> sidebar}}
-            </div>
-        </div> 
+        {{{body}}}
     </main>
 </body>
 </html>
