--- a/views/login.hbs
+++ b/views/login.hbs
@@ -1,3 +1,4 @@
+
 <h1>Login</h1>
 
 <form method="post" action="/login/process">
@@ -10,3 +11,4 @@
         <button>Login</button> 
         <h2>{{error}}</h2>
 </form>
+<a href="/register"><button>Register</button></a>
