Update article data sequalize, Delete article data sequalize

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -15,12 +15,7 @@
     </header>
     <main>
         <div>
-             <div>
-                {{> index}}
-            </div>
-            <div>
-                {{> sidebar}}
-            </div>
+            {{{body}}}
         </div> 
     </main>
 </body>
